--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1222,7 +1222,7 @@ form textarea {
       width: 100%;
       padding: 20px 50px 20px 20px;
       background: #1e202b;
-      color: white;
+      color: #bfc1c8;
     }
   .find-location input[type="submit"] {
     position: absolute;
